--- a/src/components/post/post.css
+++ b/src/components/post/post.css
@@ -59,3 +59,21 @@
   -webkit-line-clamp: 4;
   -webkit-box-orient: vertical;
 }
+
+@media screen and (max-width: 768px) {
+  .postImg{
+
+    height: 181px;
+    width: 100%;
+  }
+  .postInfo{
+    width: 95%;
+  }
+  .postDesc{
+    width: 95%;
+  }
+  .post{
+    width: 304px;
+    margin: 0px;
+  }
+}
