--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -23,6 +23,7 @@
     height:450px;
     margin-top: 80px;
     object-fit: cover;
+    pointer-events: none;
 }
 
 @media screen and (max-width: 768px) {
