--- a/src/components/singlePost/singlepost.css
+++ b/src/components/singlePost/singlepost.css
@@ -3,7 +3,8 @@
   }
   
 .singlePostWrapper {
-padding: 20px;
+  gap: 11px;
+padding: 11px 20px;
 padding-right: 0;
 display: flex;
 flex-direction: column;
@@ -21,7 +22,7 @@ flex-direction: column;
 
 .singlePostImg {
 width: 100%;
-height: 300px;
+height: 464px;
 border-radius: 5px;
 object-fit: cover;
 pointer-events: none;
@@ -117,6 +118,8 @@ resize: none;
 .singlePostDescInput:focus {
 outline: none;
 }
+
+
 .singlePostButton {
 width: 100px;
 border: none;
@@ -128,6 +131,31 @@ cursor: pointer;
 align-self: flex-end;
 margin-top: 20px;
 }
+
+.singlePostLink{
+  margin: 10px;
+font-family: "Lora", serif;
+font-size: 28px;
+text-align: center;
+border: none;
+color: gray;
+border-bottom: 1px solid lightgray;
+}
+
+.singlePostLink:focus {
+  outline: none;
+  }
+
+.singlePostVideoLink {
+  margin-top: 20px;
+  padding: 8px;
+}
+
+.singlePostFrame{
+  width: 680px;
+  height: 408px;
+}
+
 
 @media screen and (max-width: 768px) {
   .singlePostWrapper {
@@ -167,5 +195,9 @@ margin-top: 20px;
   }
   .singlePostEdit{
     margin-top: 22px;
+  }
+  .singlePostFrame{
+    width: 329px;
+    height: 236px;
   }
 }
