--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -9,34 +9,36 @@
 }
 .headerTitleSm{
     position: absolute;
-    top: 18%;
+    top: 11%;
     font-size: 20px;
 }
 .headerTitleLg{
     position: absolute;
-    top: 20%;
+    top: 13%;
     font-size: 100px;
 }
 
 .headerImg{
     width:100%;
     height:450px;
-    margin-top: 80px;
+    margin-top: 20px;
     object-fit: cover;
     pointer-events: none;
 }
 
 @media screen and (max-width: 768px) {
     .headerTitleSm {
-        position: absolute;
-        top: 13%;
-        right: 37%;
+        display: flex;
+        align-items: center;
+        /* position: absolute;
+        top: 13%; */
         font-size: 22px;
     }
     .headerTitleLg{
-        position: absolute;
-        top: 15%;
-        right: 24%;
+        display: flex;
+        /* position: absolute;
+        top: 15%; */
+        align-items: center;
         font-size: 84px;
     }
   }
