--- a/src/components/singlePost/singlepost.css
+++ b/src/components/singlePost/singlepost.css
@@ -4,10 +4,10 @@
   
 .singlePostWrapper {
   gap: 11px;
-padding: 11px 20px;
-padding-right: 0;
-display: flex;
-flex-direction: column;
+  padding: 11px 20px;
+  padding-right: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 .singlePostCats {
@@ -134,12 +134,12 @@ margin-top: 20px;
 
 .singlePostLink{
   margin: 10px;
-font-family: "Lora", serif;
-font-size: 28px;
-text-align: center;
-border: none;
-color: gray;
-border-bottom: 1px solid lightgray;
+  font-family: "Lora", serif;
+  font-size: 28px;
+  text-align: center;
+  border: none;
+  color: gray;
+  border-bottom: 1px solid lightgray;
 }
 
 .singlePostLink:focus {
@@ -156,6 +156,41 @@ border-bottom: 1px solid lightgray;
   height: 408px;
 }
 
+.relatedPostsContainer {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 20px;
+  margin: 16px 0px 16px 0px;
+}
+
+.relatedPostLink {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-decoration: none;
+  color: #333;
+}
+
+.relatedPostImg {
+  width: 100%;
+  max-height: 200px;
+  object-fit: cover;
+  border-radius: 8px;
+  margin-bottom: 10px;
+}
+
+.relatedPostTitle {
+  font-size: 16px;
+  text-align: center;
+  line-height: 1.4;
+}
+
+.spin{
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+}
 
 @media screen and (max-width: 768px) {
   .singlePostWrapper {
