--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,3 +1,11 @@
-.home{
+.homePage{
     display: flex;
 }
+  
+.spinner {
+    display: flex;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+}
+  
