--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -16,7 +16,7 @@
     border: none;
     background: none;
     cursor: pointer;
-    color: green;
+    color: brown;
     font-weight: bold;
     font-size: 20px !important;
     padding-bottom: 20px;
