--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -15,12 +15,12 @@
 .headerTitleLg{
     position: absolute;
     top: 13%;
-    font-size: 100px;
+    font-size: 90px;
 }
 
 .headerImg{
     width:100%;
-    height:450px;
+    height:395px;
     margin-top: 20px;
     object-fit: cover;
     pointer-events: none;
@@ -32,13 +32,16 @@
         align-items: center;
         /* position: absolute;
         top: 13%; */
-        font-size: 22px;
+        font-size: 20px;
     }
     .headerTitleLg{
         display: flex;
         /* position: absolute;
         top: 15%; */
         align-items: center;
-        font-size: 84px;
+        font-size: 65px;
+    }
+    .headerImg{
+        height: 250px;
     }
   }
