--- a/src/components/singlePost/singlepost.css
+++ b/src/components/singlePost/singlepost.css
@@ -9,6 +9,13 @@
   display: flex;
   flex-direction: column;
 }
+.singleImgWrapper {
+  gap: 11px;
+  padding: 11px 20px;
+  padding-right: 0;
+  display: flex;
+  justify-content: center;
+}
 
 .singlePostCats {
   font-family: "Varela Round", sans-serif;
@@ -21,11 +28,11 @@
 }
 
 .singlePostImg {
-width: 100%;
-height: 464px;
+width: 59%;
+height: 235px;
 border-radius: 5px;
-object-fit: cover;
 pointer-events: none;
+
 }
 
 .singlePostTitle {
@@ -152,13 +159,13 @@ margin-top: 20px;
 }
 
 .singlePostFrame{
-  width: 680px;
-  height: 408px;
+  height: 315px;
+  width: 560px;
 }
 
 .relatedPostsContainer {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   grid-gap: 20px;
   margin: 16px 0px 16px 0px;
 }
@@ -196,6 +203,9 @@ margin-top: 20px;
   .singlePostWrapper {
     padding: 10px;
   }
+  .singleImgWrapper {
+    padding: 10px 5px;
+  }
 
   .singlePostTitle {
     font-size: 24px;
@@ -215,7 +225,8 @@ margin-top: 20px;
   }
 
   .singlePostImg {
-    height: 200px;
+    height: 156px;
+    width: 78%;
     }
 
   .singlePostDescInput {
@@ -231,8 +242,24 @@ margin-top: 20px;
   .singlePostEdit{
     margin-top: 22px;
   }
+
+  .singlePostVideoLink{
+    display: flex;
+    justify-content: center;
+  }
+
   .singlePostFrame{
-    width: 329px;
-    height: 236px;
+    width: 298px;
+    height: 195px;
+  }
+  
+  .relatedPostsContainer {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
+    margin: 16px 0px 16px 0px;
+  }
+  .relatedPostImg{
+    width: 92%;
   }
 }
