--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -64,8 +64,8 @@
   }
 
 .sideImg{
-    height: 250px;
-    width: 250px;
+    max-height: 250px;
+    max-width: 250px;
     object-fit: cover;
 }
 
