--- a/src/components/posts/posts.css
+++ b/src/components/posts/posts.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-wrap: wrap;
     margin: 20px;
+    justify-content: center;
 }
 
 @media screen and (max-width: 768px) {
