--- a/src/pages/ContactUs/Contact.css
+++ b/src/pages/ContactUs/Contact.css
@@ -12,6 +12,7 @@
   
   .contact-image img {
     width: 100%;
+    height: auto;
   }
   
   .contact-details {
@@ -40,3 +41,9 @@
     margin-top: 20px;
   }
   
+@media screen and (max-width: 768px) {
+  .contact-container{
+    display: flex;
+    flex-direction: column;
+  }
+}
