improved web vitals

--- a/src/components/post/post.css
+++ b/src/components/post/post.css
@@ -23,7 +23,7 @@
 .postCat {
   /* font-family: "Varela Round", sans-serif; */
   font-size: 15px;
-  color: #cf8e26;
+  color: #811515;
   line-height: 20px;
   margin-top: 15px;
   margin-right: 31px;
