--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,4 +1,4 @@
-.top {
+.heaeder-section {
     width: 100%;
     height: 50px;
     background-color: white;
@@ -10,28 +10,119 @@
     z-index: 999;
   }
   
-  .topLeft,
-  .topRight {
-    flex: 3;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  .header-top{
+    background: #358597;
+    overflow: hidden;
+    padding: 15px 30px;
   }
-  
-  .topCenter {
-    flex: 6;
+
+  .header-social{
+    float: left;
   }
-  
+
+.header-social a {
+    color: #fff;
+    margin-right: 35px;
+}
+
+.facebook:hover{
+  color: #1877F2;
+}
+.instagram:hover{
+  color: #ff2a6b;
+}
+.linkedin:hover{
+  color:#0A66C2;
+}
+.youtube:hover{
+  color: red;
+}
+
+.user-panel {
+  float: right;
+  color: #fff;
+  font-size: 14px;
+  font-weight: 600;
+} 
+
+/* .header-bottom {
+  padding: 11px 0;
+  position: relative;
+} */
+
+.login-register{
+  margin-right: 5px;
+  font-size: 18px;
+  font-weight: 300;
+  cursor: pointer;
+}
+
+.login-register:hover{
+  color: black;
+}
+
+
+
+/* .menu-item{
+  margin-left: 60px;
+} */
+
+.spacing{
+  padding: 2px 27px;
+}
+
+.logo{
+  display: flex;
+  flex-direction: column;
+  margin-left: 12px;
+}
+
+.main-logo{
+  font-size: 40px;
+  /* margin: 0px;
+  padding: 0; */
+  font-family: 'Gambetta', serif;
+  letter-spacing: -2px;
+  transition: 700ms ease;
+  font-variation-settings: "wght" 311;
+  margin-bottom: 0.8rem;
+  color: rgb(66, 63, 29);
+  outline: none;
+  text-align: center;
+}
+
+.main-logo:hover {
+  font-variation-settings: "wght" 582; 
+  letter-spacing: 0.5px;
+}
+
+.nav-link{
+  font-size: 18px;
+  color: black;
+}
+
+.nav-link:hover {
+  color: #ff2a6b;
+}
+
+.userlogo{
+  display: flex;
+}
+.user-name{
+  display: flex;
+  margin: 4px;
+  justify-content: center;
+}
+
   .topIcon {
     font-size: 20px;
     margin-right: 10px;
-    color: #444;
     cursor: pointer;
   }
   
   .topImg {
     width: 40px;
-    height: 40px;
+    height: 34px;
     border-radius: 50%;
     object-fit: cover;
     cursor: pointer;
@@ -65,6 +156,14 @@
 
   }
   @media screen and (max-width: 768px) {
+      .header-social a{
+        margin-right: 4px;
+      }
+
+      .header-top{
+        padding: 15px 20px;
+      }
+
       .topLeft{
         display: none;
       }
