--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,30 +1,123 @@
-.footer {
-    background-color: #f5f5f5;
-    padding: 20px 0;
+.footer-section {
+  padding: 32px 70px 50px;
+  /* background-image: url("diwali.jpg"); */
+}
+
+.set-bg{
+  color: white;
+  background-color: gray;
+}
+
+.container-fluid{
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px;
+}
+
+.footer-social {
+  margin-top: 25px;
+  margin-left: 16px;
+}
+
+.footer-social a {
+  color: white;
+  font-size: 14px;
+  margin-right: 20px;
+}
+
+.youtube:hover{
+  color: red;
+}
+.facebook:hover{
+  color: #1877F2;
+}
+.instagram:hover{
+  color: #ff2a6b;
+}
+.linkedin:hover{
+  color:#0A66C2;
+}
+.twitter:hover{
+  color: #1DA1F2;
+}
+
+/* 
+.footer-social a:hover {
+  color:#ff2a6b
+} */
+
+
+.copyright {
+  margin-bottom: 0;
+  padding-top: 15px;
+  padding-left: 45px;
+}
+
+.footer-menu {
+  float: none;
+  margin-right: 0;
+  margin-top: 36px;
+}
+
+.footer-menu li a {
+  padding: 20px 15px;
+}
+
+.footer-menu li a:hover {
+  color: #ff2a6b;
+}
+
+
+.main-menu li, .footer-menu li {
+  display: inline;
+}
+
+.footer-main-logo{
+  font-size: 40px;
+  /* margin: 0px;
+  padding: 0; */
+  font-family: 'Gambetta', serif;
+  letter-spacing: -2px;
+  transition: 700ms ease;
+  font-variation-settings: "wght" 311;
+  margin-bottom: 0.8rem;
+  outline: none;
+}
+
+.footer-main-logo:hover {
+  font-variation-settings: "wght" 582; 
+  letter-spacing: 0.5px;
+}
+
+
+@media screen and (max-width: 768px) {
+  .footer-section{
+    padding: 27px 12px 36px;
     text-align: center;
   }
-  
-  .footer h1 {
-    margin: 0;
-    font-size: 18px;
-    color: #333;
-  }
-  
-  .footer p {
-    margin: 10px 0 0;
-    font-size: 14px;
-    color: #777;
-  }
-  
-  .footer p a {
-    color: #333;
-    text-decoration: none;
-    margin: 0 5px;
-  }
-  
-  .footer p a:hover {
-    color: #777;
-  }
+  .footer-menu {
+    margin: 30px 0 10px;
+    padding-left: 0;
+}
+.footer-menu li a {
+  padding: 7px 8px;
+}
+.footer-social {
+  margin-top: 0px;
+  margin-left: 32px;
+}
+.footer-social a{
+  margin-right: 10px;
+}
 
-  
-  
+}
