--- a/src/components/singlePost/singlepost.css
+++ b/src/components/singlePost/singlepost.css
@@ -28,23 +28,52 @@
 }
 
 .singlePostImg {
-max-width: 51%;
-max-height: 254px;
-border-radius: 5px;
-pointer-events: none;
-aspect-ratio: 3/4;
+  width: 360px;
+  height: 202px;
+  border-radius: 5px;
+  pointer-events: none;
+  margin-top: 17px;
+  margin-left: 19px;
+}
 
-
+.single-post-image{
+  background-color: white;
+  margin-bottom: 18px;
+  box-shadow: 8px 7px 8px 0 rgba(0,0,0,0.2), 0 12px 20px 0 rgba(0,0,0,0.3);
+  height: 237px;
+  width: 32%;
+  border-radius: 9px;
 }
 
 .singlePostTitle {
+  /* font-family: "Josefin Sans", sans-serif; */
+  font-size: 37px;
+  font-weight: bold;
   text-align: center;
-  margin: 10px;
-  font-size: 30px;
-  color: red;
-  background-color: beige;
-  padding: 15px;
+  letter-spacing: 1px;
+  line-height: 1.5;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3); /* Text shadow effect */
+  color: darkslateblue;
+}
+
+.single-related-image{
+  background-color: white;
+  margin-bottom: 8px;
+  box-shadow: 8px 7px 8px 0 rgba(0,0,0,0.2), 0 12px 20px 0 rgba(0,0,0,0.3);
+  height: 180px;
+  width: 100%;
+  border-radius: 9px;
+}
+
+.singleRelated {
+  text-align: center;
+  margin: 8px;
+  font-size: 28px;
+  color: white;
+  background-color: #358597;
+  padding: 11px;
   font-weight: 600;
+  
 }
 
 .singlePostTitleInput {
@@ -148,7 +177,6 @@ outline: none;
 
 .singlePostLink{
   margin: 10px;
-
   font-size: 28px;
   text-align: center;
   border: none;
@@ -193,9 +221,27 @@ outline: none;
   position: relative;
 }
 
-.center-container img {
-  max-width: 70%;
-  max-height: 100%;
+.single-post-youtube-img {
+  max-width: 93%;
+  max-height: 93%;
+  margin-top: 12px;
+  margin-left: 14px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.single-post-youtube-img:hover{
+  transform: scale(0.96);
+  transition: transform 0.3s ease;
+}
+
+.single-post-youtube{
+  background-color: white;
+  margin-bottom: 18px;
+  box-shadow: 8px 7px 8px 0 rgba(0,0,0,0.2), 0 12px 20px 0 rgba(0,0,0,0.3);
+  height: 235px;
+  width: 100%;
+  border-radius: 9px;
 }
 
 .play-button {
@@ -212,8 +258,8 @@ outline: none;
 .relatedPostsContainer {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-gap: 20px;
-  margin: 16px 0px 16px 0px;
+  grid-gap: 15px;
+  margin: 16px 4px 16px 4px;
 }
 
 .relatedPostLink {
@@ -225,15 +271,22 @@ outline: none;
 }
 
 .relatedPostImg {
-  width: 100%;
+  width: 95%;
   max-height: 200px;
   object-fit: cover;
   border-radius: 8px;
-  margin-bottom: 10px;
+  margin-top: 10px;
+  margin-left: 10px;  
+}
+
+.relatedPostImg:hover{
+  transform: scale(0.96);
+  transition: transform 0.3s ease;
 }
 
 .relatedPostTitle {
-  font-size: 16px;
+  margin-top: 24px;
+  font-size: 19px;
   text-align: center;
   line-height: 1.4;
 }
@@ -265,47 +318,61 @@ outline: none;
     font-size: 14px;
   }
 
-  .singlePostDesc {
-    font-size: 21px;
-    line-height: 31px;
-  }
+.singlePostDesc {
+font-size: 21px;
+line-height: 31px;
+}
 
-  .singlePostImg {
-    max-height: 116px;
-    max-width: 58%;
-    }
+.singlePostImg {
+max-width: 230px;
+height: 140px;
+}
 
-  .singlePostDescInput {
-    font-size: 16px;
-  }
+.single-post-image{
+  width: 77%;
+  height: 173px;
+}
 
-  .singlePostButton {
-    width: 80px;
-    padding: 3px;
-    font-size: 12px;
-    margin-top: 10px;
-  }
-  .singlePostEdit{
-    margin-top: 22px;
-  }
+.singlePostDescInput {
+  font-size: 16px;
+}
 
-  .singlePostVideoLink{
-    display: flex;
-    justify-content: center;
-  }
 
-  .singlePostFrame{
-    width: 295px;
-    height: 166px;
-  }
-  
-  .relatedPostsContainer {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 20px;
-    margin: 16px 0px 16px 0px;
-  }
-  .relatedPostImg{
-    max-width: 92%;
-  }
+.singlePostButton {
+  width: 80px;
+  padding: 3px;
+  font-size: 12px;
+  margin-top: 10px;
+}
+.singlePostEdit{
+  margin-top: 22px;
+}
+
+.single-post-youtube {
+  height: 198px;
+}
+
+.singlePostVideoLink{
+  display: flex;
+  justify-content: center;
+}
+
+.singlePostFrame{
+  width: 295px;
+  height: 166px;
+}
+
+.relatedPostsContainer {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-gap: 20px;
+  margin: 16px 0px 16px 0px;
+}
+.relatedPostImg{
+  max-width: 92%;
+}
+.singleRelated{
+  font-size: 23px;
+  padding: 7px;
+}
 }
