--- a/src/components/spinner/spinner.css
+++ b/src/components/spinner/spinner.css
@@ -9,28 +9,32 @@
     z-index: 9999;
   }
     
-  
-  .circle-spinner {
-    width: 40px;
-    height: 40px;
+  .loader {
+    width: 48px;
+    height: 48px;
+    border: 5px solid #FFF;
+    border-bottom-color: transparent;
     border-radius: 50%;
-    border: 4px solid #f3f3f3;
-    border-top: 4px solid #3498db;
-    animation: circle-animation 1s linear infinite;
-  }
-  
-  @keyframes circle-animation {
+    display: inline-block;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+    }
+
+    @keyframes rotation {
     0% {
-      transform: rotate(0deg);
+        transform: rotate(0deg);
+        border: 4px solid #f44336;
+        border-left-color: transparent;
+    }
+    50%{
+      transform: rotate(180deg);
+      border: 4px solid #673ab7;
+      border-left-color: transparent;
     }
     100% {
       transform: rotate(360deg);
+      border: 4px solid #f44336;
+    border-left-color: transparent;
     }
-  }
-  
-  .loading-text {
-    margin: 10px;
-    color: #666;
-    font-size: 16px;
-  }
+    } 
   
