--- a/src/components/post/post.css
+++ b/src/components/post/post.css
@@ -56,7 +56,7 @@
     letter-spacing: 1px;
     line-height: 1.5;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3); /* Text shadow effect */
-    color: darkslateblue;
+    color: darkred;
 }
 
 .postDate {
