--- a/src/components/singlePost/singlepost.css
+++ b/src/components/singlePost/singlepost.css
@@ -53,7 +53,7 @@
   letter-spacing: 1px;
   line-height: 1.5;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3); /* Text shadow effect */
-  color: darkslateblue;
+  color: darkred;
 }
 
 .single-related-image{
@@ -67,13 +67,20 @@
 
 .singleRelated {
   text-align: center;
-  margin: 8px;
   font-size: 28px;
   color: white;
-  background-color: #358597;
   padding: 11px;
   font-weight: 600;
-  
+  margin: 10px 0px 38px;
+  box-shadow: 8px 7px 8px 0 rgba(0,0,0,0.2), 0 12px 20px 0 rgba(0,0,0,0.3);
+  height: 61px;
+  width: 98%;
+  border-radius: 9px;
+  background-color: crimson;
+}
+
+.related{
+  margin-bottom: 10px;
 }
 
 .singlePostTitleInput {
@@ -134,7 +141,7 @@ color: tomato;
 }
 
 .singlePostDesc {
-  color: #666;
+  color: indigo;
   font-size: 26px;
   line-height: 36px;
   white-space: pre-line;
@@ -381,5 +388,6 @@ height: 140px;
 .singleRelated{
   font-size: 23px;
   padding: 7px;
+  height: 0%;
 }
 }
