--- a/src/pages/Notfound/Pagenotfound.css
+++ b/src/pages/Notfound/Pagenotfound.css
@@ -28,6 +28,7 @@
     text-decoration: none;
     border-radius: 4px;
     transition: background-color 0.3s ease;
+    margin-bottom: 27px;
   }
   
   .pnf-btn:hover {
