changed related post and post image

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@ body,
   height: 100%;
 }
 body{
-  font-family: 'Josefin Sans', cursive;
+  font-family: 'Josefin Sans', 'sans-serif';
   background-color: lavenderblush;
 }
 .app-container {
