--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -182,6 +182,10 @@
   user-select: none; 
 }
 
+.none{
+  display: none;
+}
+
 @media screen and (max-width: 768px) {
   .postImg{
     pointer-events: none;
@@ -204,6 +208,11 @@
   .post{
     width: 304px;
     margin: 0px;
+  }
+  .googleAdContainer{
+    display:flex;
+    margin: 20px 0px;
+    justify-content: center;
   }
 }
 
