--- a/src/components/singlePost/singlepost.css
+++ b/src/components/singlePost/singlepost.css
@@ -202,7 +202,8 @@ outline: none;
 
 .singlePostVideoLink {
   margin-top: 20px;
-  padding: 8px;
+  padding-right: 22px;
+  padding-left: 10px;
   display: flex;
   justify-content: center;
 }
@@ -225,47 +226,6 @@ outline: none;
 } */
 
 /* youtube place holder image */
-
-.center-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-}
-
-.single-post-youtube-img {
-  max-width: 93%;
-  max-height: 93%;
-  margin-top: 12px;
-  margin-left: 14px;
-  border-radius: 10px;
-  cursor: pointer;
-}
-
-.single-post-youtube-img:hover{
-  transform: scale(0.96);
-  transition: transform 0.3s ease;
-}
-
-.single-post-youtube{
-  background-color: white;
-  margin-bottom: 18px;
-  box-shadow: 8px 7px 8px 0 rgba(0,0,0,0.2), 0 12px 20px 0 rgba(0,0,0,0.3);
-  height: 235px;
-  width: 100%;
-  border-radius: 9px;
-}
-
-.play-button {
-  position: absolute;
-  cursor: pointer;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-
-
 
 .relatedPostsContainer {
   display: grid;
@@ -316,6 +276,13 @@ outline: none;
   display:flex;
   margin: 20px 0px;
   justify-content: center;
+}
+
+@media screen and (max-width: 700px) {
+  .singlePostFrame{
+    height: 300px;
+    max-width: 100%;
+  }
 }
 
 @media screen and (max-width: 440px) {
@@ -376,18 +343,14 @@ height: 140px;
   margin-top: 22px;
 }
 
-.single-post-youtube {
-  height: 198px;
-}
-
 .singlePostVideoLink{
   display: flex;
   justify-content: center;
 }
 
 .singlePostFrame{
-  width: 295px;
-  height: 166px;
+  max-width: 100%;
+  height: 280px;
 }
 
 .relatedPostsContainer {
