--- a/src/components/singlePost/singlepost.css
+++ b/src/components/singlePost/singlepost.css
@@ -191,36 +191,36 @@ outline: none;
   outline: none;
   }
 
-.singlePostVideoLink {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 9px;
-  width: 53%;
-  box-shadow: 8px 7px 8px 0 rgba(0,0,0,0.2), 0 12px 20px 0 rgba(0,0,0,0.3);
-  height: 380px;
+  
+  
+  
+  
+  /* youtube place holder image */
+  .singlePostVideoLink {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 9px;
+    width: 53%;
+    box-shadow: 8px 7px 8px 0 rgba(0,0,0,0.2), 0 12px 20px 0 rgba(0,0,0,0.3);
+    height: 380px;
+    margin-bottom: 20px;
+  }
+  
+  .singlePostFrame{
+    height: 330px;
+    width: 94%;
+    border-radius: 10px;
+  }
+  
+.play-button {
+  position: absolute;
+  cursor: pointer;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
-
-.singlePostFrame{
-  height: 330px;
-  width: 94%;
-  border-radius: 10px;
-}
-
-
-
-/* .singlePostTitle{
-  height: 20px;
-  display: flex;
-  justify-content: center;
-  font-size: larger;
-  color: red;
-  background-color: beige;
-  padding: 15px;
-  font-weight: 600;
-} */
-
-/* youtube place holder image */
 
 .single-related-image{
   background-color: white;
@@ -250,6 +250,12 @@ outline: none;
 }
 
 .relatedPostImg {
+  width: 100%;
+  max-height: 200px;
+  object-fit: cover;
+  border-radius: 8px;
+}
+.relatedPostLazy {
   width: 95%;
   max-height: 200px;
   object-fit: cover;
@@ -338,18 +344,18 @@ outline: none;
   }
 
 .singlePostDesc {
-font-size: 21px;
-line-height: 31px;
+  font-size: 21px;
+  line-height: 31px;
 }
 
-.singlePostImg {
+/* .singlePostImg {
 height: 140px;
-}
+} */
 
-.single-post-image{
+/* .single-post-image{
   width: 73%;
   height: 173px;
-}
+} */
 
 .singlePostDescInput {
   font-size: 16px;
@@ -389,8 +395,11 @@ height: 140px;
   grid-gap: 20px;
   margin: 16px 0px 16px 0px;
 }
-.relatedPostImg{
+.relatedPostLazy{
   max-width: 92%;
+}
+.relatedPostImg{
+  max-width: 100%;
 }
 .singleRelated{
   font-size: 23px;
