--- a/src/components/gads/style.css
+++ b/src/components/gads/style.css
@@ -2,3 +2,7 @@ ins.adsbygoogle[data-ad-status="unfilled"] {
     display: none !important;
     margin: none !important;
 }
+
+.adcontainer{
+    width: 100%;
+}
