changed ad setting

--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,10 @@ body{
 .content-wrapper {
   flex: 1;
 }
+
+.googleAdContainer{
+  display:flex;
+  margin: 2px 0px;
+  justify-content: center;
+  width: 97%;
+}
