--- a/src/components/singlePost/singlepost.css
+++ b/src/components/singlePost/singlepost.css
@@ -262,6 +262,7 @@ outline: none;
   display:flex;
   margin: 2px 0px;
   justify-content: center;
+  width: 100%;
 }
 
 @media screen and (max-width: 850px) {
