--- a/src/components/gads/style.css
+++ b/src/components/gads/style.css
@@ -1,7 +1,7 @@
-/* ins.adsbygoogle[data-ad-status="unfilled"] {
+ins.adsbygoogle[data-ad-status="unfilled"] {
     display: none !important;
     margin: none !important;
-} */
+}
 
 .adcontainer{
     width: 97%;
