--- a/src/components/gads/style.css
+++ b/src/components/gads/style.css
@@ -1,8 +1,9 @@
-ins.adsbygoogle[data-ad-status="unfilled"] {
+/* ins.adsbygoogle[data-ad-status="unfilled"] {
     display: none !important;
     margin: none !important;
-}
+} */
 
 .adcontainer{
-    width: 97%;
+    width: 100%;
+    overflow: hidden;
 }
