--- a/src/components/singlePost/singlepost.css
+++ b/src/components/singlePost/singlepost.css
@@ -11,7 +11,6 @@
 }
 .singleImgWrapper {
   gap: 11px;
-  /* padding: 11px 20px; */
   padding-right: 0;
   display: flex;
   justify-content: center;
@@ -28,13 +27,12 @@
 }
 
 .singlePostTitle {
-  /* font-family: "Josefin Sans", sans-serif; */
   font-size: 37px;
   font-weight: bold;
   text-align: center;
   letter-spacing: 1px;
   line-height: 1.5;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3); /* Text shadow effect */
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
   color: darkred;
 }
 
@@ -167,9 +165,6 @@ outline: none;
   }
 
   
-  
-  
-  
   /* youtube place holder image */
   .singlePostVideoLink {
     position: relative;
@@ -255,17 +250,6 @@ outline: none;
   justify-content: center;
   align-items: center;
 }
-.none{
-  display: none;
-}
-.googleAdContainer{
-  display:flex;
-  margin: 2px 0px;
-  justify-content: center;
-  width: 100%;
-  overflow: hidden;
-}
-
 @media screen and (max-width: 850px) {
   .relatedPostsContainer {
     display: grid;
